# mini-nangila

./: .dockerignore  .gitignore  CITATION.cff  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release-docker.yml
benchmarks/: plot_baselines.py  run_baselines.sh
docs/: ARCHITECTURE.md  BENCHMARKS.md  CHECKPOINTING.md  CLA.md  CPU_VERIFICATION.md  DDP_HOOK_QUICKSTART.md  DOCKER.md  EXPECTED_PERFORMANCE.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  PHASE_1_PLAN.md  RELEASING.md  SCIENCE_VS_SCALE.md  WHITEPAPER.md  WHITEPAPER_ALIGNMENT.md
docs/TUTORIALS/: determinism_safety.md  entropy_reduction.md
examples/checkpoint_demo/: Cargo.toml
examples/checkpoint_demo/src/: main.rs
examples/cpu_compression_bench/: Cargo.toml
examples/cpu_compression_bench/src/: main.rs
examples/hpc_compress_bench/: Cargo.toml
examples/hpc_compress_bench/src/: main.rs
examples/lammps_compress/: Cargo.toml  README.md
examples/lammps_compress/src/: main.rs
examples/mode_switching/: Cargo.toml
examples/mode_switching/src/: main.rs
examples/nano_gpt/: Cargo.toml
examples/nano_gpt/src/: main.rs
examples/rotor_twin/: Cargo.toml
examples/rotor_twin/src/: main.rs
examples/rotor_twin_net/: Cargo.toml  README.md  build.rs  client_metrics.csv  server_metrics.csv
examples/rotor_twin_net/proto/: rotor.proto
examples/throughput_bench/: Cargo.toml
examples/throughput_bench/src/: main.rs
examples/topology_calibration/: Cargo.toml
examples/topology_calibration/src/: main.rs
nangila-ai/: Cargo.toml
nangila-ai/src/: lib.rs  momentum.rs  quantizer.rs  topk.rs
nangila-checkpoint/: Cargo.toml
nangila-checkpoint/src/: lib.rs
nangila-checkpoint/tests/: h5.rs
nangila-core/: Cargo.toml
nangila-core/src/: lib.rs  predictor.rs  quantizer.rs  topology.rs  unified_quantizer.rs
nangila-core/tests/: proptest_predictors.rs
nangila-edge/: Cargo.toml
nangila-edge/src/: lib.rs
nangila-hpc/: Cargo.toml
nangila-hpc/src/: block_sparse.rs  block_sparse_rle.rs  error_bounded.rs  lib.rs  linear.rs  rle.rs
nangila-math/: Cargo.toml
nangila-math/examples/: determinism_hash.rs
nangila-math/src/: fixed_point.rs  lib.rs  ops.rs
nangila-math/tests/: determinism.rs  proptest_fixed_point.proptest-regressions  proptest_fixed_point.rs
nangila-twin/: Cargo.toml
nangila-twin/src/: edge_sync.rs  lib.rs
python/: pyproject.toml
python/nangila_ddp/: README.md  __init__.py  comm_hook.py  plot_metrics.py  plot_train_and_compression.py  train_nano.py
python/nangila_ddp/examples/: minigpt_train.py
python/snippets/: entropy_plot.py  plot_hpc_logs.py  plot_rotor_net.py  read_hdf5_checkpoint.py
scripts/: verify.sh
tests/: test_ai_pipeline.rs  test_hpc_pipeline.rs
verification/: ai_20x_ddp_metrics.csv  ai_20x_train_log.csv  ai_20xplus_ddp_metrics.csv  ai_20xplus_train_log.csv  ai_baseline_ddp_metrics.csv  ai_baseline_train_log.csv  ai_ddp_metrics.csv  ai_ddp_metrics_topk.csv  ai_throughput.txt  ai_train_log.csv  ai_train_log_topk.csv  determinism_hash.txt  hpc_bench.txt  hpc_lammps.txt  hpc_lammps_ascii_control.txt  hpc_lammps_blocksparse.txt  hpc_lammps_bsrle.txt  hpc_lammps_decompress.txt  hpc_lammps_eb.txt  hpc_lammps_large.txt  hpc_lammps_real.txt  hpc_lammps_rle_eps1e2.txt  hpc_lammps_rle_eps5e2.txt  rotor.txt  tests.txt  topology.txt  twin_client_metrics.csv  twin_server_metrics.csv
