[package]
name = "nangila-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nangila-math = { path = "../nangila-math" }
thiserror = "1.0"
rand = "0.8"  # For stochastic quantization baseline
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"  # For topology mask serialization

[dev-dependencies]
proptest.workspace = true
nangila-ai = { path = "../nangila-ai" }
nangila-hpc = { path = "../nangila-hpc" }
