[package]
name = "nangila-hpc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nangila-core = { path = "../nangila-core" }
nangila-math = { path = "../nangila-math" }
thiserror = "1.0"

[dependencies.hdf5]
version = "0.8"
optional = true

[dev-dependencies]
proptest.workspace = true
